--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,9 +22,16 @@
       "@/*": ["./src/*"],
       "@hooks/*": ["./hooks/*"],
       "@components/*": ["./components/*"],
-      "@common/*": ["./common/*"]
+      "@common/*": ["./common/*"],
+      "@libs/*": ["./lib/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "app/api/signup"
+  ],
   "exclude": ["node_modules"]
 }
