--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,13 +24,18 @@
       "@components/*": ["./components/*"],
       "@common/*": ["./common/*"],
       "@libs/*": ["./lib/*"]
-    }
+    },
+    "typeRoots": ["./node_modules/@types", "./types"]
+  },
+  "ts-node": {
+    "require": ["tsconfig-paths/register"]
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
+    "types/**/*.d.ts",
     "app/api/signup"
   ],
   "exclude": ["node_modules"]
