--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@prisma/client": "^6.14.0",
     "cookie": "^1.0.2",
+    "easy-peasy": "^6.1.0",
+    "format-duration": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-howler": "^5.2.0",
     "react-icons": "^5.5.0",
     "swr": "^2.3.6"
   },
