--- a/package.json
+++ b/package.json
@@ -34,9 +34,7 @@
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.5",
-    "typescript": "^5",
-    "eslint-plugin-prettier": "^9.0.0",
-    "prettier": "^3.0.0"
+    "typescript": "^5"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
